# llm-semantic-router

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: routes.py  schemas.py
app/core/: __init__.py  cost_cascade_router.py  embeddings.py  observability.py  semantic_cache.py  semantic_router.py
tests/: test_enterprise_router.py  test_semantic_router.py
