[project]
name = "llm-semantic-router"
version = "1.0.0"
description = "High-performance Semantic Caching and Dynamic Model Routing Middleware for LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "numpy>=1.26.0",
    "langfuse>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
